--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "sh scripts/build.sh",
-    "deploy": "npm run build  && gh-pages -d dist"
+    "build": "marp --input-dir slides",
+    "deploy": "npm run build && gh-pages -d slides"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/neuefische/java-slides#readme",
   "devDependencies": {
+    "@marp-team/marp-cli": "^1.1.1",
     "gh-pages": "3.1.0"
   }
 }
